save vs do not send implemented.  refactored some of endset activity and associated classes